// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewEvent renders 1`] = `
<form
  className="form"
>
  <label
    htmlFor="form.title"
  >
    title: 
  </label>
  <br />
  <input
    id="form.title"
    type="text"
  />
  <br />
  <label
    htmlFor="form.date"
  >
    begins at: 
  </label>
  <br />
  <input
    id="form.date"
    placeholder={undefined}
    type="text"
  />
  <br />
  <label
    htmlFor="form.location"
  >
    location: 
  </label>
  <br />
  <input
    id="form.location"
    type="text"
  />
  <br />
  <label
    htmlFor="form.description"
  >
    description: 
  </label>
  <br />
  <input
    id="form.description"
    type="text"
  />
  <br />
</form>
`;

exports[`NewEvent with props renders with placeholder 1`] = `
<form
  className="form"
>
  <label
    htmlFor="form.title"
  >
    title: 
  </label>
  <br />
  <input
    id="form.title"
    type="text"
  />
  <br />
  <label
    htmlFor="form.date"
  >
    begins at: 
  </label>
  <br />
  <input
    id="form.date"
    placeholder="Wednesday"
    type="text"
  />
  <br />
  <label
    htmlFor="form.location"
  >
    location: 
  </label>
  <br />
  <input
    id="form.location"
    type="text"
  />
  <br />
  <label
    htmlFor="form.description"
  >
    description: 
  </label>
  <br />
  <input
    id="form.description"
    type="text"
  />
  <br />
</form>
`;
